--- a/appkg_SelfCare/templates/base.html
+++ b/appkg_SelfCare/templates/base.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>BrandMeister RESTful API docs</title>
-    <link href="static/styles.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="static/favicon.ico" type="image/x-icon">
-</head>
-<body>
-
-<!-- Expanded code will come here //-->
-
-
-
-
-<p>&nbsp;</p>
-<p><b><i>The BrandMeister Development Team</i></b></p>
-</body>
+    <head>
+        {% block head %}
+            {% block title %}{% endblock %}
+        {% endblock %}
+    </head>
+    <body
+        {% block body %}
+        {% endblock %}
+        <p>&nbsp;</p>
+        {%  block footer %}
+        {% endblock %}
+     </body>
 </html>
+
+<!--
+ You, smarty-pants... I knew you would come here in the end.....  ;)
+
+ The thing now is... Did you find what you were looking for? Are you interested in collaborate with the \
+ BrandMeister Development Team in programming services and build infrastructures for Ham Radio projects?
+
+ Should your answers to both questions were definitively "yes", then, get in touch with me: EA1HET.
+ And not, for haven's sake, don't question yourself... What's EA1HET?. If you did, GIYF or RTFM.
+//-->
