--- a/appkg_SelfCare/templates/index.html
+++ b/appkg_SelfCare/templates/index.html
@@ -1,17 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>BrandMeister RESTful API</title>
-    <link href="static/styles.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="static/favicon.ico" type="image/x-icon">
-</head>
-<body>
-<div align="left"><img src="static/brandmeister.png" border="0"></div>
-<h2>RESTful API server endpoint</h2>
-<p>In order to correctly invoke this RESTful API please read &amp; follow
-    <a href="{{ url_for('apidocs') }}">the docs</a>. Thank you!</p>
-<p>&nbsp;</p>
-<p><b><i>The BrandMeister Development Team</i></b></p>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block head %}
+    {% block title %}
+        <title>BrandMeister RESTful API</title>
+    {% endblock %}
+    <link href="{{ url_for('static', filename='styles/styles.css')}}" rel="stylesheet" type="text/css">
+    <link href="{{ url_for('static', filename='images/favicon.ico')}}" rel="icon" type="image/x-icon">
+{% endblock %}
+
+{% block body %}
+    class="operation-ok">
+    <div align="left">
+        <img src="{{ url_for('static', filename='images/brandmeister.png')}}"  border="0">
+        <ul id="breadcrumb">
+            <li><a href="{{ url_for('index') }}" title="Home">
+                <img src="{{ url_for('static', filename='images/home.png')}}" alt="Home" class="home" /></a>
+            </li>
+        </ul>
+    </div>
+    <h1>RESTful API server</h1>
+    <p>In order to correctly invoke this RESTful API please read &amp; follow
+        <a href="{{ url_for('apidocs') }}">the docs</a>. Thank you!</p>
+{% endblock %}
+
+{% block footer %}
+    <hr size="1" noshade>
+    <p><b><span class="copy-left">&copy;</span><i>The BrandMeister Development Team</i></b></p>
+{% endblock %}
